--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/runtime": "^7.24.7",
     "@types/ws": "^8.5.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slider": "^2.0.6",
     "ws": "^8.17.0"
   },
   "devDependencies": {
