--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.24.7",
+    "@types/howler": "^2.2.11",
     "@types/ws": "^8.5.10",
+    "howler": "^2.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-slider": "^2.0.6",
     "ws": "^8.17.0"
   },
